fixed #12: div overlap submit button in step 2

--- a/wp-content/plugins/wdm-create-ad/css/style.css
+++ b/wp-content/plugins/wdm-create-ad/css/style.css
@@ -997,3 +997,7 @@ input[type="radio"]:checked + span{
   background-color: rgba(0, 0, 0, 0.8);
   display: none;
 }
+
+.formcarbonbackground dynamic-select fieldset {
+  margin-bottom: 0;
+}
